[build-system]
requires = [
    "hatchling>=1.5.0",
]
build-backend = "hatchling.build"

[project]
name = "yara-mail"
description = "A Python package and command line utility for scanning emails with YARA rules"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Sean Whalen", email = "whalenster@gmail.com" },
]
keywords = [
    "YARA",
    "email",
    "security",
    "information security",
    "infosec",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Topic :: Communications :: Email",

]
dependencies = [
    "mailsuite>=1.9.20",
    "pdftotext==2.2.2",
    "simplejson>=3.17.6",
    "yara-python>=4.2.3",
]
dynamic = [
    "version",
]

[project.scripts]
yaramail = "yaramail._cli:_main"

[project.urls]
Homepage = "https://github.com/seanthegeek/yaramail"
Documentation = "https://seanthegeek.github.io/yaramail/"
Issues = "https://github.com/seanthegeek/yaramail/issues"
Changelog = "https://github.com/seanthegeek/yaramail/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "yaramail/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/yaramail",
]

[tool.hatch.build.targets.wheel]
packages = ["yaramail"]
